--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 *~vsd
 *.obj
 *.autosave
+*.o
+/qtgl01/debug/*.o
 /qtgl01-build-desktop-Qt_4_7_4_for_Desktop_-_MinGW_4_4__Qt_SDK__Debug/debug/*
 /qtgl01-build-desktop-Qt_4_7_4_for_Desktop_-_MinGW_4_4__Qt_SDK__Debug/release/*
