--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 *.o
 *.orig
 /Joypick/*
+
+/qtgl01/textures/*
+/qtgl01/map/*
+
 /qtgl01/debug/moc*
 /qtgl01/debug/*.o
 /qtgl01-build-desktop-Qt_4_7_4_for_Desktop_-_MinGW_4_4__Qt_SDK__Debug/debug/*
